Updated sesnitivity studies using speudo-data

--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -153,9 +153,9 @@
 
 
 %-------------------------------------------------------------------------------
-%\section{``Quark-Gluon'' Resonance Search Sensitivity}
-%\label{sec:QGselection}
-%\input{include/QGsensitivity.tex}
+\section{``Quark-Gluon'' Resonance Search Sensitivity}
+\label{sec:QGselection}
+\input{include/QGsensitivity.tex}
 %\clearpage
 %-------------------------------------------------------------------------------
 
