--- a/include/QGselection.tex
+++ b/include/QGselection.tex
@@ -120,6 +120,7 @@ selection efficiencies in each \pT\ bin along with the best fit to Eq.~\ref{eq:n
 
 
 \subsection{Expected Signal Significance}
+\label{sec:ExpectedSig}
 
 The dijet mass spectrum has a complex background with rapidly changing  fractions of events that originate 
 from quark-quark, quark-gluon and gluon-gluon. The expected signal significance has been investigated using 
