Remove some extraneous comments

--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -207,9 +207,9 @@ Place your conclusion here.
 % The argument gives the fraction of the text width used for the names
 %-------------------------------------------------------------------------------
 \clearpage
-The supporting notes for the analysis should also contain a list of contributors.
-This information should usually be included in \texttt{mydocument-metadata.tex}.
-The list should be printed either here or before the Table of Contents.
+%The supporting notes for the analysis should also contain a list of contributors.
+%This information should usually be included in \texttt{mydocument-metadata.tex}.
+%The list should be printed either here or before the Table of Contents.
 \PrintAtlasContribute{0.30}
 
 
@@ -222,8 +222,8 @@ The list should be printed either here or before the Table of Contents.
 \clearpage
 %-------------------------------------------------------------------------------
 
-In an ATLAS note, use the appendices to include all the technical details of your work
-that are relevant for the ATLAS Collaboration only (e.g.\ dataset details, software release used).
-This information should be printed after the Bibliography.
+%In an ATLAS note, use the appendices to include all the technical details of your work
+%that are relevant for the ATLAS Collaboration only (e.g.\ dataset details, software release used).
+%This information should be printed after the Bibliography.
 
 \end{document}
