--- a/ANA-EXOT-2019-32-INT1-defs.sty
+++ b/ANA-EXOT-2019-32-INT1-defs.sty
@@ -17,7 +17,7 @@
 \def\Fchimjj{$\mFchimjj$}
 \def\mjj{\ensuremath{m_{jj}}\xspace}
 \def\ystar{\ensuremath{y^\ast}\xspace}
-\def\yB{\ensuremath{y_B}\xspace}
+\def\yB{\ensuremath{y_\mathrm{B}}\xspace}
 \def\qstar{\ensuremath{q^\ast}\xspace}
 \def\bstar{\ensuremath{b^\ast}\xspace}
 \def\Wstar{\ensuremath{W^\ast}\xspace}
