--- a/include/event_selection.tex
+++ b/include/event_selection.tex
@@ -153,12 +153,13 @@ the cuts applied are:
 
 Additional kinematic selection criteria are used for the resonance and
 angular search distributions separately to optimise the search
-potential.
+potential and ensure good tracking efficiency.
 
 
-The following cuts are also applied to the  resonance searches:
+The following cuts are also applied to the quark-gluon tagged resonance searches:
 \begin{itemize}
 \item $|\ystar| < 0.6$
+\item \todo{redo as cut in \yB.} $| \eta | < 2.1$
 \item $\mjj > 1100~\GeV$
 \end{itemize}
 
