Added comments about undecided cuts

--- a/include/event_selection.tex
+++ b/include/event_selection.tex
@@ -156,14 +156,14 @@ angular search distributions separately to optimise the search
 potential and ensure good tracking efficiency.
 
 
-The following cuts are also applied to the quark-gluon tagged resonance searches:
+The following cuts are also applied to the quark-gluon tagged resonance searches:\todo{This order might change.}
 \begin{itemize}
 \item $|\ystar| < 0.6$
 \item \todo{redo as cut in \yB.} $| \eta | < 2.1$
 \item $\mjj > 1100~\GeV$
 \end{itemize}
 
-Given its different decay topology, for the search of String signal slightly different cuts are applied:
+Given its different decay topology, for the search of String signal slightly different cuts are applied:\todo{This has not yet been decided. A smaller $\ystar$ cut might be better.}
 \begin{itemize}
 \item $|\ystar| < 1.2$
 \item $\mjj > 1717~\GeV$
@@ -425,6 +425,7 @@ Given its different decay topology, for the search of String signal slightly dif
 %\label{sec:data_cutflow}
 
 \todo{Remove jet cuts and redo percentages} 
+\todo{Add $\Delta\phi$ and $\eta$ cuts. Change order of $\mjj$ and $|\ystar|$ cuts. Probably need table for $|\ystar| < 0.8$ cut.}
 This section and the next present the analysis cutflows. Cutflows obtained on
 Run-2 data are presented in Tables~\ref{tab:cutFlow_resonance_run2} and 
 \ref{tab:cutFlow_wstar_run2}.
