--- a/include/event_selection.tex
+++ b/include/event_selection.tex
@@ -430,8 +430,6 @@ This section and the next present the analysis cutflows. Cutflows obtained on
 Run-2 data are presented in Tables~\ref{tab:cutFlow_resonance_run2} and 
 \ref{tab:cutFlow_wstar_run2}.
 
-
-
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{l|c|c}
@@ -474,6 +472,25 @@ Run-2 data are presented in Tables~\ref{tab:cutFlow_resonance_run2} and
 		\label{tab:cutFlow_wstar_run2} }
 \end{table}
 
+Joyti confirms these tables up to the row ``jet pre-selection'', but after that he has three additonal rows.
+We don't know what TriggerEfficieincy is yet there are events lost. The $|\ystar|$ cut can be removed at we don't make it and no events are lost. 
+But the last row is worrysome that no events are lost.
+And the origial tables make no mention or requiring at least two jets.
+
+\begin{table}[htbp]
+	\centering
+	\begin{tabular}{l|c|c}
+		\hline\hline
+		Selection criteria & $N_{events}$ & rel. decrease (\%) \\
+		\hline
+		TriggerEfficiency: N/A & 259157844 &\\
+		$|\ystar|$: N/A        & 259157844 &\\
+		Leading jet $\pT \ge 380\GeV$ & &\\
+		Sub-leading jet $\pT \ge 150\GeV$ & 259157844 &\\
+		Jet multiplicity $\ge 2$ & &\\
+		\hline\hline
+	\end{tabular}
+\end{table}
 
 %\begin{table}[htbp]
 %\sisetup{group-minimum-digits=4}
