add data and mc dijet samples

--- a/include/appendix.tex
+++ b/include/appendix.tex
@@ -1,3 +1,11 @@
+% Data Samples
+\input{include/datasamples.tex}
+
+%MC QCD Dijet Samples
+\input{include/qcddijetsamples.tex}
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Monte Carlo string samples}
 
