add mass turn-on

--- a/include/event_selection.tex
+++ b/include/event_selection.tex
@@ -132,6 +132,8 @@ uses the HLT\_j420 trigger with no cut on the leading jet \pT.
 %%Dengfeng Add
 \input{include/yStarcut.tex}
 
+\input{include/massturnon.tex}
+
 \subsection{Baseline selection}
 \label{sec:base_selection}
 The baseline event selection is applied for all signal regions and
